EZ-1505 dir accesses modal

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -212,7 +212,7 @@
 <script id="t-c-modal" type="text/x-handlebars">
     <div id="{{id}}" class="modal {{#fixedFooter}}fixed-footer{{/fixedFooter}} {{#wide}}wide{{/wide}}">
         <div class="modal-content">
-            {{#title}}<h4>{{title}}</h4>{{/title}}
+            {{#title}}<h4 class="modal-title">{{title}}</h4>{{/title}}
             {{#bodyComps}}
                 <ez-dst id="{{id}}"></ez-dst>
             {{/bodyComps}}
