EZ-1522 show compiler error above editor

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -687,6 +687,11 @@
     </div>
 </script>
 
+<script id="t-c-exercise-tab-aa-tsl-yaml" type="text/x-handlebars">
+    <pre id="tsl-yaml-compiler-feedback"></pre>
+    <ez-dst id="{{editorDst}}"></ez-dst>
+</script>
+
 
 <!-- Grade table page -->
 <script id="t-c-grades-card" type="text/x-handlebars">
