EZ-1546 allow setting "visible from" for course exercises from course exercises list

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -346,18 +346,6 @@
     </div>
 </script>
 
-<!-- Course exercises page -->
-
-<script id="t-c-course-exercises-teacher" type="text/x-handlebars">
-    <div class="title-wrap no-crumb">
-        <h2 class="title">{{title}}</h2>
-    </div>
-    <ez-dst id="{{collDst}}"></ez-dst>
-    <ez-dst id="{{reorderModalDst}}"></ez-dst>
-    <ez-dst id="{{updateTitleAliasModalDst}}"></ez-dst>
-    <ez-dst id="{{newExerciseModalDst}}"></ez-dst>
-</script>
-
 
 <!-- Exercise page -->
 
@@ -1239,7 +1227,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.1/mode/meta.min.js"></script>
 <!-- Required for legacy non-dynamic modes -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.1/mode/python/python.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.1/theme/idea.css"/>†
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.1/theme/idea.css"/>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.1/addon/display/autorefresh.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.1/addon/edit/matchbrackets.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.1/addon/display/placeholder.min.js"></script>
