EZ-1546 course exercise settings modal is now available from course exercise page sidenav as well

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -906,6 +906,7 @@
             <textarea id="aa-files"></textarea>
         </div>
     {{/aaTitle}}
+    <ez-dst id="{{updateModalDst}}"></ez-dst>
 </script>
 
 <script id="tm-exercise-crumbs" type="text/x-handlebars-template">
