wui center submit buttons

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -877,7 +877,7 @@
         <div class="editor-top"></div>
         <textarea id="testing-submission">{{latestSubmission}}</textarea>
     </div>
-    <div class="center">
+    <div class="center" style="display: flex; justify-content: center;">
         <button id="testing-submit" class="waves-effect waves-light btn">{{checkLabel}}</button>
     </div>
 </script>
@@ -964,7 +964,7 @@
         </div>
         <textarea id="submission"></textarea>
     </div>
-    <div class="center">
+    <div class="center" style="display: flex; justify-content: center;">
         <button id="submit-button" class="waves-effect waves-light btn">{{checkLabel}}</button>
     </div>
 </script>
