wui add preconnect link elements to html

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lahendus</title>
+    <link rel="preconnect" href="https://ems.lahendus.ut.ee">
+    <link rel="preconnect" href="https://idp.lahendus.ut.ee">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <script src="/static/js/pace.min.js"></script>
     <link rel="stylesheet" href="/static/css/pace.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
